--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "core",
   "module": "index.ts",
+  "version": "0.0.1",
   "type": "module",
   "private": true,
   "devDependencies": {
