--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,5 +38,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           # Tag to create/move and use for the release
           tag: "v${{ env.version }}"
+          name: "v${{ env.version }}"
           # Files to attach; newline seperated, recursive globbing supported
           files: dist/highliteCore.js
