--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,6 @@ jobs:
           # Tag to create/move and use for the release
           tag: "v${{ env.version }}"
           name: "v${{ env.version }}"
-          body: ""
+          body: "Highlite Core Release v${{ env.version }}"
           # Files to attach; newline seperated, recursive globbing supported
           files: dist/highliteCore.js
