--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "peerDependencies": {
     "typescript": "^5"
   },
+  "dependencies": {
+    "@babylonjs/core": "^8.7.0",
+    "idb": "^8.0.3"
+  },
   "private": true,
   "type": "module"
 }
