--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "typescript": "^5"
   },
   "private": true,
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "idb": "^8.0.3"
+  }
 }
