--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Build and Release
 
 on:
   push:
@@ -22,6 +22,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
+    - name: Enable Corepack
+      run: corepack enable
+      
     - name: Install Dependencies
       run: yarn install
 
