--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Build and Release
 
 on:
@@ -63,7 +60,7 @@ jobs:
       - name: Create/Update GitHub Release
         uses: softprops/action-gh-release@v2.2.2
         with:
-          name: v${{VERSION}}
+          name: "Release v${{ env.VERSION }}"
           prerelease: true
           generate_release_notes: true
   
