--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -62,7 +62,7 @@ jobs:
           name: HighliteCore
 
       - name: Create/Update GitHub Release
-      - uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           artifactErrorsFailBuild: true
