--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,6 +61,9 @@ jobs:
         with:
           name: HighliteCore
 
+      - name: Debug LS
+        run: ls
+
       - name: Create/Update GitHub Release
         uses: ncipollo/release-action@v1
         with:
