--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # dependencies (bun install)
 node_modules
 
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # output
 dist/
 out
